Fix alignment of section title and child in row view

--- a/common/app/assets/stylesheets/module/_new-navigation.scss
+++ b/common/app/assets/stylesheets/module/_new-navigation.scss
@@ -303,6 +303,29 @@ $new-navigation-h-space-between-items: $gs-gutter !global;
         ));
     }
 }
+.global-navigation__section {
+    display: block;
+    clear: both;
+    margin-right: 0;
+    overflow: hidden;
+    border-top: 1px solid $c-global-navigation-border;
+    position: relative;
+    @include rem((
+        min-height: $gs-row-height
+    ));
+
+    @include mq(mobileLandscape, tablet) {
+        @include rem((
+            margin-right: -$gs-gutter,
+            margin-left: -$gs-gutter
+        ));
+    }
+    @include mq(tablet) {
+        @include rem((
+            padding-left: (gs-span(2) + $gs-gutter)
+        ));
+    }
+}
 .global-navigation__title {
     @include mq($to: tablet) {
         @include rem((
@@ -319,6 +342,11 @@ $new-navigation-h-space-between-items: $gs-gutter !global;
         ));
     }
     @include mq(tablet) {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        background: $c-global-navigation-title-background;
         @include rem((
             width: gs-span(2),
             padding-left: $gs-gutter
@@ -356,10 +384,7 @@ $new-navigation-h-space-between-items: $gs-gutter !global;
     }
     @include mq(tablet) {
         @include rem((
-            padding-bottom: $gs-baseline/4,
-            padding-left: $gs-gutter/4,
-            border-left: (gs-span(2) + $gs-gutter) solid $c-global-navigation-title-background,
-            margin-left: -(gs-span(2) + $gs-gutter)
+            padding-bottom: $gs-baseline/4
         ));
     }
 }
@@ -370,20 +395,6 @@ $new-navigation-h-space-between-items: $gs-gutter !global;
             line-height: $gs-row-height - $gs-baseline/2,
             padding-left: $new-navigation-h-space-between-items/2,
             padding-right: $new-navigation-h-space-between-items/2
-        ));
-    }
-}
-.global-navigation__section {
-    display: block;
-    clear: both;
-    margin-right: 0;
-    overflow: hidden;
-    border-top: 1px solid $c-global-navigation-border;
-
-    @include mq(mobileLandscape, tablet) {
-        @include rem((
-            margin-right: -$gs-gutter,
-            margin-left: -$gs-gutter
         ));
     }
 }
